<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynrclcpp</name>
  <version>0.0.0</version>
  <description>Dynamic ROS2 Client Library in C++</description>
  <maintainer email="nipun.dhananjaya@gmail.com">nipun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dynmsg</depend>
  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
