<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynrclcpp_examples</name>
  <version>0.0.0</version>
  <description>ROS 2 client dynamic library | examples </description>
  <maintainer email="nipun.dhananjaya@gmail.com">W.M. Nipun Dhananjaya</maintainer>
  <license>Apache 2.0</license>
  <author email="nipun.dhananjaya@gmail.com">W.M. Nipun Dhananjaya</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>dynmsg</depend>
  <depend>dynrclcpp</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
